# nptool_study

./: .last_phy_file  .last_sim_file  README.md  nptool.sh
Benchmarks/gaspard/: ShowResults.C
Inputs/DetectorConfiguration/: Example1.detector  Example4.detector  csi.detector
Inputs/EnergyLoss/: B11_BC400.G4table  B11_Pb.G4table  B11_Vacuum.G4table  Be8[94.000]_Al.G4table  Be8[94.000]_CO2_1bar_295K.G4table  Be8[94.000]_CsI.G4table  Be8[94.000]_Cu.G4table  Be8[94.000]_He_1bar_295K.G4table  Be8[94.000]_Mylar.G4table  Be8[94.000]_Si.G4table  Be8[94.000]_Vacuum.G4table  Be8_Al.G4table  Be8_CO2_1.01325bar_293.15K.G4table  Be8_CO2_1bar_295K.G4table  Be8_CsI.G4table  Be8_Cu.G4table  Be8_He_1.01325bar_293.15K.G4table  Be8_He_1bar_295K.G4table  Be8_Mylar.G4table  Be8_Si.G4table  Be8_Vacuum.G4table  C12[4440.000]_Al.G4table  C12[4440.000]_CO2_1bar_295K.G4table  C12[4440.000]_CsI.G4table  C12[4440.000]_Cu.G4table  C12[4440.000]_He_1bar_295K.G4table  C12[4440.000]_Mylar.G4table  C12[4440.000]_Si.G4table  C12[4440.000]_Vacuum.G4table  C12[7650.000]_Al.G4table  C12[7650.000]_CO2_1.01325bar_293.15K.G4table  C12[7650.000]_CO2_1bar_295K.G4table  C12[7650.000]_CO2_2bar_295K.G4table  (+154 more)
NPLib/: CMakeCache.txt  CMakeLists.txt  ClassList.txt  Makefile  NPLibConfig.cmake  NPLibTargets.cmake  cmake_install.cmake  install_manifest.txt
NPLib/Detectors/TPCDRUM/: CMakeLists.txt  Makefile  TTPCDRUMData.cxx  TTPCDRUMData.h  TTPCDRUMDataDict.cxx  TTPCDRUMPhysics.cxx  TTPCDRUMPhysics.h  TTPCDRUMPhysicsDict.cxx  TTPCDRUMPhysicsDict_rdict.pcm  TTPCDRUMSpectra.cxx  TTPCDRUMSpectra.h  cmake_install.cmake
NPLib/Utility/: CMakeLists.txt  Makefile  cmake_install.cmake  npanalysis.cxx  npcalibration  npcalibration.cxx  npreader.cxx  npspectra_test
NPSimulation/: CMakeCache.txt  CMakeLists.txt  Makefile  PhysicsListOption.txt  Simulation.cc  cmake_install.cmake  install_manifest.txt
(+180 files in other folders)
